<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.jackg.programmers.challenges.imagememo.data.MemoEntity"/>

        <variable
            name="entity"
            type="MemoEntity" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@{entity.subject}"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                tools:text="@string/text_hint_subject" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="8dp"
                android:text="@{@string/tvDetailDate_prefix + entity.dateTime}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDetailCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:minHeight="100dp"
                android:padding="16dp"
                android:text="@{entity.content}"
                tools:text="@string/text_hint_content" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/imgScrollContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:setDetailIv="@{entity.imgUrl}">

                <LinearLayout
                    android:id="@+id/ivContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp"></LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/modify_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/bnt_txt_modify" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/list_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="49dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toStartOf="@id/modify_button"
                    android:layout_toEndOf="@+id/delete_button"
                    android:text="@string/bnt_txt_list" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:text="@string/bnt_txt_delete" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>