<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.jackg.programmers.challenges.imagememo.data.MemoEntity"/>

        <variable
            name="entity"
            type="MemoEntity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MemoModifyFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_subject"
                android:paddingBottom="8dp"
                app:boxStrokeColor="#2196F3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sub_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@{entity.subject}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_content"
                android:paddingBottom="8dp"
                app:boxStrokeColor="#2196F3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/con_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:isScrollContainer="true"
                    android:gravity="start|top"
                    android:inputType="text|textMultiLine"
                    android:text="@{entity.content}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/imgScrollContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ivContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true"
                    android:orientation="horizontal"
                    app:setModifyIv="@{entity.imgUrl}"/>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/bnt_txt_modify" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="87dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toStartOf="@id/submit_button"
                    android:layout_toEndOf="@+id/add_img_button"
                    android:text="@string/bnt_txt_back" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_img_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/bnt_txt_add_img" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>